add function for expense

--- a/src/global.css
+++ b/src/global.css
@@ -6,7 +6,7 @@
   --primary-color: #fff;
   --secondary-color: #3a1078;
   --accent-color: #3544cf;
-  --neutral-color: #edeffa;
+  --neutral-color: #eeeff0;
   --text-color: #000;
   --text-accent: #fff;
 
