--- a/src/global.css
+++ b/src/global.css
@@ -37,5 +37,5 @@ body {
 }
 
 #root {
-  @apply min-h-full text-black transition duration-100 delay-0 bg-[var(--primary-color)] dark:bg-[var(--dark-primary-color)] dark:text-white;
+  @apply min-h-full h-full flex flex-col text-black transition duration-100 delay-0 bg-[var(--primary-color)] dark:bg-[var(--dark-primary-color)] dark:text-white;
 }
