--- a/src/global.css
+++ b/src/global.css
@@ -10,19 +10,19 @@
   --text-color: #000;
   --text-accent: #fff; */
 
-  --primary-color: #fff;
-  --secondary-color: #faf7ec;
-  --accent-color: #ff5f00;
-  --neutral-color: #fdf9ea;
+  --primary-color: #ffffff;
+  --neutral-color: #f6f6f6;
+  --secondary-color: #98ded9;
+  --accent-color: #161d6f;
   --text-color: #000;
-  --text-accent: #fff;
+  --text-accent: #f6f6f6;
 
-  --dark-primary-color: #14181c;
-  --dark-secondary-color: #040d12;
-  --dark-accent-color: #009d1a;
+  --dark-primary-color: #14142b;
+  --dark-neutral-color: #24263a;
+  --dark-secondary-color: #161d6f;
+  --dark-accent-color: #98ded9;
   --dark-text-color: #fff;
   --dark-text-accent: #fff;
-  --dark-neutral-color: #1e2429;
   /* f9d276 */
 }
 
@@ -46,7 +46,7 @@ body {
 }
 
 #root {
-  @apply h-full min-h-screen flex flex-col text-black transition duration-100 delay-0 bg-[var(--secondary-color)] dark:bg-[var(--dark-secondary-color)] dark:text-white;
+  @apply h-full min-h-screen flex flex-col text-black transition duration-100 delay-0 bg-[var(--primary-color)] dark:bg-[var(--dark-primary-color)] dark:text-white;
 }
 
 /* Hide scrollbar for WebKit browsers */
