--- a/src/global.css
+++ b/src/global.css
@@ -54,6 +54,18 @@ body {
   @apply h-full min-h-screen flex flex-col text-black transition duration-100 delay-0 bg-[var(--primary-color)] md:w-[70%] md:mx-auto xl:w-[60%] 2xl:w-[40%] dark:bg-[var(--dark-primary-color)] dark:text-white;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--brand-color-100);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--accent-color);
+}
+
 /* Hide scrollbar for WebKit browsers */
 .horizontalFilter,
 .planCarousel,
